--- a/docs/机场推荐/100机场推荐.md
+++ b/docs/机场推荐/100机场推荐.md
@@ -98,6 +98,12 @@ permalink: /posts/vpnsum/
 |[cocoduck](#cocoduck)|[https://cocoduck.live](https://cocoduck.live/auth/register?code=ca0cfb89fa)| 1天2GB试用| 15元150GB/月|无|
 |[99吧](#99吧)|[https://99vpn.bar](https://99vpn.bar/#/register?code=Wls9E3cC)| 1天1GB试享| 9.9元99GB/月|29.9元111GB/永用|
 |[TNTCloud](#tntcloud)|[https://a04.tntvipaffb06.cc](https://a04.tntvipaffb06.cc/#/register?code=t9Xe2sMs)| 无试享| 10元60GB/月（季结算）|无|
+|[FlyBit](#flyBit)|[https://www.fb2026.cc](https://www.fb2026.cc/#/register?code=p3DOcgzt)| 一天2G| 15元128GB/月|无|
+|[奈云](#奈云)|[http://6.vip.v2ny.me](http://6.vip.v2ny.me?path=register&code=DJYy4gfX)| 12小时6G| 28元388GB/月|118元280G不限时用完为止|
+|[全球云](#全球云)|[https://gc01.globalyun.cc](https://gc01.globalyun.cc/#/?code=fG3SoI20)| 无试享| 20元120GB/月|无|
+
+
+
 
 ......
 
@@ -115,12 +121,12 @@ permalink: /posts/vpnsum/
 
 | VPN套餐名称 | 月度价格 | 月度流量 | 购买跳转 |
 | --- | --- | --- | --- |
-| 季度优惠方案 | ¥80/三个月 | 300GB/月 | [前往购买](https://my.ssonestop.com/checkout?id=1) |
-| 经济实用版 | ¥10/单月 | 60GB/月 | [前往购买](https://my.ssonestop.com/checkout?id=9) |
-| 专业工作版 | ¥39/每月 | 500GB/月 | [前往购买](https://my.ssonestop.com/checkout?id=2) |
-| 高配无忧版 | ¥60/每月 | 1200GB/月 | [前往购买](https://my.ssonestop.com/checkout?id=3) |
-| 团队协作版 | ¥150/每月 | 5000GB/月 | [前往购买](https://my.ssonestop.com/checkout?id=4) |
-| 年付超划版 | ¥200/整年 | 5000GB/年 | [前往购买](https://my.ssonestop.com/checkout?id=6) |
+| 季度优惠方案 | ¥80/三个月 | 300GB/月 | [前往购买](https://hello-ssone.com/register?aff=QpXdVaKY) |
+| 经济实用版 | ¥10/单月 | 60GB/月 | [前往购买](https://hello-ssone.com/register?aff=QpXdVaKY) |
+| 专业工作版 | ¥39/每月 | 500GB/月 | [前往购买](https://hello-ssone.com/register?aff=QpXdVaKY) |
+| 高配无忧版 | ¥60/每月 | 1200GB/月 | [前往购买](https://hello-ssone.com/register?aff=QpXdVaKY) |
+| 团队协作版 | ¥150/每月 | 5000GB/月 | [前往购买](https://hello-ssone.com/register?aff=QpXdVaKY) |
+| 年付超划版 | ¥200/整年 | 5000GB/年 | [前往购买](https://hello-ssone.com/register?aff=QpXdVaKY) |
 
 ---
 
@@ -143,6 +149,14 @@ xxyun阶梯式加速关键属性：
 - 零区域终端限额。
 - 500Mbps硬限速，晚高峰段无额外限流
 - 业界一流技术骨干，即时化问题响应
+
+| 套餐 | 价格 | 流量 | 购买地址 |
+| --- | --- | --- | --- |
+| 初级套餐 | 9.99元/每月 | 100G/月 | [点击购买](https://cloud.xxvip.shop/register?code=3AYVsSKY) |
+| 中级套餐 | 19.9元/每月 | 300G/月 | [点击购买](https://cloud.xxvip.shop/register?code=3AYVsSKY) |
+| 高级套餐 | 39.9元/每月 | 1000G/月 | [点击购买](https://cloud.xxvip.shop/register?code=3AYVsSKY) |
+| 500G[不限时] | 66.66元/一次性 | 500G/不限时 | [点击购买](https://cloud.xxvip.shop/register?code=3AYVsSKY) |
+| 2888G[不限时] | 199元/一次性 | 2888G/不限时 | [点击购买](https://cloud.xxvip.shop/register?code=3AYVsSKY) |
 
 ---
 
@@ -205,7 +219,7 @@ xxyun阶梯式加速关键属性：
 
 官网地址：[https://www02.lightyearti.cc](https://haandiiong.gntvipaff.cc/#/?code=4bY3Zbbk)
 
-邀请码：ZWhMOU3y
+邀请码：4bY3Zbbk
 - 全IPLC专线，ss协议，不限速，不限制客户端
 - 新用户注册首次下单享受7折
 
@@ -213,8 +227,31 @@ xxyun阶梯式加速关键属性：
 
 | 套餐 | 价格 | 流量 | 购买地址 |
 | --- | --- | --- | --- |
-| 光年梯 入门版 | ¥18/一个月 | 110GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/1?period=month_price) |
-| 光年梯 晋级版 | ¥34/一个月 | 220GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/2?period=month_price) |
-| 光年梯 专业版 | ¥68/一个月 | 450GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/3?period=month_price) |
-| 光年梯 至尊版 | ¥130/一个月 | 900GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/4?period=month_price) |
-| 独享私人专线节点 | ¥680/一个月 | 500GB/月 | [点击购买](https://www02.lightyearti.cc/#/order/5?period=month_price) |
+| 光年梯 入门版 | ¥18/一个月 | 110GB/月 | [点击购买](https://haandiiong.gntvipaff.cc/#/?code=4bY3Zbbk) |
+| 光年梯 晋级版 | ¥34/一个月 | 220GB/月 | [点击购买](https://haandiiong.gntvipaff.cc/#/?code=4bY3Zbbk) |
+| 光年梯 专业版 | ¥68/一个月 | 450GB/月 | [点击购买](https://haandiiong.gntvipaff.cc/#/?code=4bY3Zbbk) |
+| 光年梯 至尊版 | ¥130/一个月 | 900GB/月 | [点击购买](https://haandiiong.gntvipaff.cc/#/?code=4bY3Zbbk) |
+| 独享私人专线节点 | ¥680/一个月 | 500GB/月 | [点击购买](https://haandiiong.gntvipaff.cc/#/?code=4bY3Zbbk) |
+
+
+
+### 奈云
+
+奈云机场官网地址：[aff.v2ny.mom](http://6.vip.v2ny.me?path=register&code=DJYy4gfX)
+
+邀请码：DJYy4gfX
+
+试用：无
+
+最便宜的订阅有10.6元 168G/月(年付)。
+
+奈云机场是绝对的老牌机场，已稳定运营6年以上未出现过负面评价，节点数量非常多，足以满足大部分用户的需求。支持支付宝、微信支付。
+
+| 套餐 | 价格 | 流量 | 购买地址 |
+| --- | --- | --- | --- |
+| Basic-基础套餐(特惠) | ¥128.00/每年 | 168G/月 | [点击购买](http://6.vip.v2ny.me?path=register&code=DJYy4gfX) |
+| Pro-进阶套餐 | ¥28.00 /每月 | 388GB/月 | [点击购买](http://6.vip.v2ny.me?path=register&code=DJYy4gfX) |
+| Max-专业套餐 | ¥49.00 /每月 | 788GB/月 | [点击购买](http://6.vip.v2ny.me?path=register&code=DJYy4gfX) |
+| 280G [按量计费] | ¥98.00 /一次性 | 280GB/不限时 | [点击购买](http://6.vip.v2ny.me?path=register&code=DJYy4gfX) |
+| 680G [按量计费] | ¥218.00 /一次性 | 680GGB/不限时 | [点击购买](http://6.vip.v2ny.me?path=register&code=DJYy4gfX) |
+| 2048G [按量计费] | ¥498.00 /一次性 | 2048GGB/不限时 | [点击购买](http://6.vip.v2ny.me?path=register&code=DJYy4gfX) |
