--- a/docs/vpn工具/95pc翻墙工具.md
+++ b/docs/vpn工具/95pc翻墙工具.md
@@ -55,8 +55,7 @@ description: Clash Verge是2026年最实用的PC翻墙工具。本文详解Windo
 根据你使用的操作系统，按照以下步骤快速安装与启动Clash Verge电脑版：
 ### Windows电脑安装Clash Verge步骤
 - **下载安装**：双击运行 `Clash.Verge.Windows.x64.exe` 安装程序，按提示完成安装
-- **首次运行**：启动Clash Verge后，需要在设置中点击「服务模式」安装按钮
-- **启用核心功能**：依次打开「Tun 模式」和「系统代理」开关，使系统所有应用都能走代理
+- **启用核心功能**：依次打开「首页」和「系统代理」开关，使系统所有应用都能走代理
 - **导入VPN订阅**：准备好翻墙机场的订阅链接，按下文配置步骤导入
 
 ### macOS苹果电脑安装Clash Verge步骤  
