--- a/docs/vpn工具/软路由介绍.md
+++ b/docs/vpn工具/软路由介绍.md
@@ -5,7 +5,7 @@ tags:
   - VPN
   - 机场
   - 推荐
-title: 软路由配置教程：OpenWrt、爱快系统科学上网与VPN功能全解析
+title: 软路由是什么？新手软路由配置教程（OpenWrt / 爱快全指南）
 permalink: /posts/ruanluyou/
 ---
 
@@ -13,64 +13,153 @@ permalink: /posts/ruanluyou/
 
 <!-- more -->
 
-## 软路由配置教程：OpenWrt、爱快系统科学上网与VPN功能全解析
+# 软路由是什么？新手软路由配置教程（OpenWrt / 爱快全指南）
 
 ## 一、什么是软路由？
 
-软路由（Software Router）是指通过一台普通电脑、低功耗主机或单板机（如 N5105 小主机、树莓派等），  
-安装路由系统（如 OpenWrt、爱快、RouterOS、pfSense、OPNsense）来实现路由器的功能。  
+**软路由**，指的是使用通用硬件（如 x86 主机、工控机、旧电脑）安装路由系统软件，实现比传统硬路由更强大的网络管理功能。
 
-相比硬路由（传统路由器），软路由具有：
+相比普通路由器，软路由的核心优势在于：
 
-- 硬件性能更强，可扩展性好  
-- 功能更丰富（科学上网、广告过滤、QoS、VLAN、NAS 等）  
-- 系统可定制，社区生态丰富  
+- ✅ 可安装插件，功能高度可扩展  
+- ✅ 性能更强，支持千兆 / 万兆网络  
+- ✅ 灵活配置策略路由、VPN、广告过滤  
+- ✅ 适合科学上网、家庭网络优化、企业网络
 
----
-
-## 二、常见的软路由系统
-
-- **OpenWrt**：开源路由系统，插件丰富，适合 DIY 用户  
-- **爱快（iKuai）**：中文界面，企业级路由方案，稳定好用  
-- **pfSense / OPNsense**：基于 FreeBSD，功能强大，适合企业或实验室  
-- **RouterOS (MikroTik)**：专业路由系统，学习成本高  
+常见的软路由系统包括 **OpenWrt、爱快（iKuai）、pfSense** 等。
 
 ---
 
-## 三、软路由基本配置步骤
+## 二、软路由和普通路由器的区别
 
-### 1. 准备工作
+| 对比项 | 普通路由器 | 软路由 |
+|------|-----------|--------|
+| 硬件 | 固定 | 自由选择 |
+| 系统 | 厂商封闭 | 开源或商业系统 |
+| 插件 | 少 | 非常多 |
+| 科学上网 | 受限 | 强 |
+| 可玩性 | 低 | 高 |
 
-- 一台支持的主机（常见 N5105 / N100 / J1900 等平台）  
-- 至少两张网卡（WAN、LAN）  
-- 下载并写入对应路由系统的镜像  
-
-### 2. 网络接口配置
-
-- **WAN 口**：连接上级运营商的光猫或宽带  
-- **LAN 口**：连接交换机或无线路由器（AP 模式）  
-- 分配 IP 地址，如 `LAN: 192.168.1.1`  
-
-### 3. 基础服务
-
-- **DHCP 服务**：自动分配内网 IP  
-- **DNS 服务**：配置本地 DNS 解析，或接入 DoH/DoT  
-- **防火墙设置**：基本 NAT、防火墙策略  
-
-### 4. 高级功能
-
-- **科学上网**：Clash / V2Ray / SSR / OpenClash 等插件  
-- **广告过滤**：AdGuard Home、SmartDNS  
-- **流控与 QoS**：带宽管理、限速策略  
-- **端口转发**：内网穿透、远程访问 NAS/监控  
-- **VPN**：IPSec、WireGuard、OpenVPN  
+如果你对 **科学上网、分流、广告过滤、NAS、旁路由** 有需求，软路由几乎是必选。
 
 ---
 
-## 四、典型网络拓扑
+## 三、软路由适合哪些人？
 
-```text
-光猫（桥接） → 软路由（WAN） → 交换机 → 无线路由（AP模式） → 各种终端设备
-```
+软路由并不是“人人都要用”，更适合以下人群：
 
-[👉 立即访问机场合集](https://yp7.net/posts/vpnsum/)
+- 🔹 有稳定科学上网需求  
+- 🔹 家庭多设备，需要分流策略  
+- 🔹 对网络延迟、带宽有要求  
+- 🔹 喜欢折腾、追求可控性  
+- 🔹 做机场 / 网络服务相关项目
+
+如果你只是刷短视频、上网课，普通路由器就够了。
+
+---
+
+## 四、软路由常见系统介绍
+
+### 1️⃣ OpenWrt（最流行）
+
+- 完全开源  
+- 插件生态最丰富  
+- 支持 PassWall / OpenClash 等  
+- 社区活跃，教程多
+
+👉 **推荐指数：⭐⭐⭐⭐⭐**
+
+### 2️⃣ 爱快（iKuai）
+
+- 国内商业系统  
+- 界面友好，上手简单  
+- 策略路由和 QoS 很强  
+- 免费版功能已足够
+
+👉 **推荐指数：⭐⭐⭐⭐**
+
+---
+
+## 五、软路由硬件怎么选？
+
+### 入门推荐配置（性价比）
+
+- CPU：J1900 / N5105 / N100  
+- 内存：4GB 起步  
+- 硬盘：16GB SSD 即可  
+- 网口：至少 2 个千兆口
+
+### 高性能需求
+
+- 多拨 / 万兆 / 多用户  
+- 可选 i3 / i5 + 多网卡
+
+⚠️ 不建议用树莓派作为主软路由，稳定性一般。
+
+---
+
+## 六、软路由基础安装流程
+
+以 **OpenWrt（x86）** 为例：
+
+1. 下载对应架构的 OpenWrt 镜像  
+2. 使用 Rufus / balenaEtcher 写入 U 盘  
+3. 设备从 U 盘启动  
+4. 安装到硬盘  
+5. 设置 LAN / WAN  
+6. 浏览器访问后台管理界面
+
+安装完成后，即可进入插件配置阶段。
+
+---
+
+## 七、软路由科学上网配置思路
+
+常见方案：
+
+- OpenClash（适合 Clash 用户）  
+- PassWall（支持多协议）  
+- SSR Plus
+
+核心思路是：
+
+- 国内直连  
+- 国外走代理  
+- 流媒体分流  
+- 游戏 / 工作线路区分
+
+这也是软路由相比普通路由器**最大的优势点**。
+
+---
+
+## 八、软路由常见应用场景
+
+- 🌍 全家设备科学上网  
+- 🚫 广告过滤（DNS / 插件）  
+- 🎮 游戏低延迟分流  
+- 📺 Netflix / YouTube 解锁  
+- 🏠 旁路由不改原网络结构
+
+---
+
+## 九、软路由常见问题（FAQ）
+
+### Q1：软路由会很难吗？
+不难，新手只要照教程走，1 小时内可以跑起来。
+
+### Q2：软路由耗电高吗？
+一般 10–20W，全天开也很省电。
+
+### Q3：软路由会不稳定吗？
+硬件合格、系统配置正确，**比家用路由还稳定**。
+
+---
+
+## 十、总结：要不要上软路由？
+
+一句话总结：
+
+> **只要你对网络有进阶需求，软路由一定值得折腾。**
+
+如果你只是普通上网用户，普通路由器即可；  
+如果你追求自由、稳定、可控，软路由是终点。
